--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        ##use_sql_comments : true
+        #show_sql: true -> 프린트
+        ##use_sql_comments : true -> jpql
         format_sql: true
         ##default_batch_fetch_size : 100
 
