--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,21 +1,21 @@
-
-spring:
-  profiles:
-    active: test
-  datasource:
-    url: jdbc:mysql://localhost:3306/root?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: 369369rt
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        #show_sql: true -> 프린트
-        ##use_sql_comments : true -> jpql
-        format_sql: true
-        default_batch_fetch_size : 100
-
-logging.level:
-  org.hibernate.SQL: debug
+#
+#spring:
+#  profiles:
+#    active: test
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/root?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#    username: root
+#    password: 369369rt
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+#        #show_sql: true -> 프린트
+#        ##use_sql_comments : true -> jpql
+#        format_sql: true
+#        default_batch_fetch_size : 100
+#
+#logging.level:
+#  org.hibernate.SQL: debug
